Made game report its own component
Also added content to the not found page

--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,1 +1,5 @@
-<p>not-found works!</p>
+<div class="page-content">
+    <h1 class="text-alert">404: No se encontró la página.</h1>
+    <p>Asegurate de haber insertado la URL correcta.</p>
+    <a href="/"><button class="main-btn">Volver a la página principal</button></a>
+</div>
