--- a/src/styles.css
+++ b/src/styles.css
@@ -30,6 +30,8 @@ body {
     align-items: center;
     background-color: var(--color-main);
     font-weight: 600;
+    border-top-left-radius: inherit;
+    border-top-right-radius: inherit;
 }
 
 .main_title {
@@ -44,12 +46,12 @@ body {
     width: 2.5rem;
 }
 
-.btn-sandwitch {
+.btn-toolbar {
     fill: var(--color-dark);
     transition: 200ms ease;
 }
 
-.btn-sandwitch:hover{
+.btn-toolbar:hover{
     fill: rgba(0, 0, 0, 0.733);
 }
 
@@ -109,6 +111,14 @@ body {
     height:2rem;
 }
 
+/*================= Forms ================*/
+.text-input {
+    display: block;
+    margin: .3rem 0 .75rem .5rem;
+    padding: 3px;
+    border-radius: 5px;
+    border: 0;
+}
 
 /*================ Buttons ===============*/
 
@@ -123,11 +133,16 @@ body {
     border: none;
     background: var(--color-main);
     padding: 1.25rem;
-    margin: 0.5rem;
+    margin: 0.5rem 0;
     border-radius: 10px;
     color: var(--color-bg); 
     font-size: 1rem;
     font-weight: 500;
+}
+
+.btn-small {
+    padding: 0.5rem;
+    border-radius: 8px;
 }
 
 /*============= Page content ============*/
@@ -151,6 +166,27 @@ body {
 
 .text-alert {
     color: var(--color-alert);
+}
+
+/*=============Overlays==========*/
+.overlay-card {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    background: var(--color-bg);
+    border-radius: 15px;
+    transform: translate(-50%, -50%);
+    box-shadow: 0px 5px 15px black;
+}
+
+.overlay-bg {
+    background: var(--color-bg);
+    opacity: 40%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
 }
 
 /*============== Table =================*/
