--- a/src/app/unauthorized/unauthorized.component.html
+++ b/src/app/unauthorized/unauthorized.component.html
@@ -1,5 +1,5 @@
 <div class="page-content">
-    <h1 class="text-alert">404: No se encontró la página.</h1>
-    <p>Asegurate de haber insertado la URL correcta.</p>
+    <h1 class="text-alert">You shall not pass</h1>
+    <p>No estás autorizado para ingresar a esta página.</p>
     <a href="/" style="margin-left: 2rem;"><button class="main-btn btn-small">Volver a la página principal</button></a>
 </div>
