--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,6 @@
-<div class="side-menu" [@openCloseSideMenu]="sideMenuOpen ? 'open' : 'closed'" (mouseleave)="showSideMenu(false)">
-  <ul class="side-menu-nav">
-    <li class="nav-item">
-      <a href="/" class="side-menu-link">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M20 7.093v-5.093h-3v2.093l3 3zm4 5.907l-12-12-12 12h3v10h7v-5h4v5h7v-10h3zm-5 8h-3v-5h-8v5h-3v-10.26l7-6.912 7 6.99v10.182z"/></svg>
-        <span class="link-text">
-          <h1>Inicio</h1>
-        </span>
-      </a>
-    </li>
-    <hr/>
-    <li class="nav-item" *ngIf="isLoggedIn">
-      <a href="/report-game" class="side-menu-link">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M9 19h-4v-2h4v2zm2.946-4.036l3.107 3.105-4.112.931 1.005-4.036zm12.054-5.839l-7.898 7.996-3.202-3.202 7.898-7.995 3.202 3.201zm-6 8.92v3.955h-16v-20h7.362c4.156 0 2.638 6 2.638 6s2.313-.635 4.067-.133l1.952-1.976c-2.214-2.807-5.762-5.891-7.83-5.891h-10.189v24h20v-7.98l-2 2.025z"/></svg> 
-        <span class="link-text">Reportar</span>
-      </a>
-    </li>
-  </ul>
-</div>
+<app-side-menu></app-side-menu>
 <div class="toolbar" role="banner">
-  <a (click)="showSideMenu(true)">
+  <a (click)="showSideMenu()">
     <svg class="btn-toolbar" width="30" height="23" viewBox="0 0 59 45" xmlns="http://www.w3.org/2000/svg">
       <rect width="59" height="11" />
       <rect y="34" width="59" height="11" />
