Added background image
An some layour for title and buttons

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,3 +1,23 @@
+<div class="main-page-title-section">
+    <img class="main-bg-img" src="https://lh4.googleusercontent.com/Dwz5Nos8r8My2U06mmmsmUmBPU5Z62TFJWk4KHXV3mq1ItZN_HW0c5SKpn4hwXZF4d5RuIp1-BT82p8ENzW2KwHfgaj7PCvojhRjZWLtttB9yH_m2KlgJ9F4hOi3vCbDpdUASFHJ">
+    <div class="main-page-menu">
+        <h1>
+            ¡Descubre quién es el mejor en este ranking institucional!
+        </h1>
+        <hr>
+        <div class="main-page-buttons">
+            <button class="main-page-btn">
+                Hola si
+            </button>
+            <button class="main-page-btn">
+                Hola si
+            </button>
+        </div>
+    </div>
+</div>
+
+
+
 <div class="page-content">
     <h1>Componente principal</h1>
     <p>Contenido final aún por agregar.</p>
