--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -7,10 +7,16 @@
         <hr>
         <div class="main-page-buttons">
             <button class="main-page-btn">
-                Hola si
+                <div class="main-page-btn-text">
+                    Ranking de jugadores
+                </div>
+                <span class="main-page-btn-icon" [inlineSVG]="'assets/svg/controller.svg'"></span>
             </button>
             <button class="main-page-btn">
-                Hola si
+                <div class="main-page-btn-text">
+                    Torneos recientes
+                </div>
+                <span class="main-page-btn-icon" [inlineSVG]="'assets/svg/cup.svg'"></span>
             </button>
         </div>
     </div>
