Added links to buttons

--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -7,7 +7,7 @@
         <hr>
         <div class="main-page-buttons">
             <button class="main-page-btn">
-                <div class="main-page-btn-text">
+                <div class="main-page-btn-text" routerLink="/players">
                     Ranking de jugadores
                 </div>
                 <span class="main-page-btn-icon" >
@@ -15,7 +15,7 @@
                 </span>
             </button>
             <button class="main-page-btn">
-                <div class="main-page-btn-text">
+                <div class="main-page-btn-text" routerLink="/tournaments">
                     Torneos recientes
                 </div>
                 <span class="main-page-btn-icon">
