--- a/src/styles.scss
+++ b/src/styles.scss
@@ -200,3 +200,6 @@ body {
 .page-content table td{
     text-align: center;
 }
+
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
