Finally fixed styling error  with root
I'm not sure what happened or why it happened. But now it works for me. I need to check on my comrades

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,7 +15,7 @@
     --color-alert: #d62727;
 }
 
-body {
+.app-html-body{
     font-family: 'Roboto', sans-serif;
     background: var(--color-bg);
     color: var(--color-text);
@@ -145,6 +145,3 @@ body {
 .page-content table td{
     text-align: center;
 }
-
-/* Importing Bootstrap SCSS file. */
-@import '~bootstrap/scss/bootstrap';
