--- a/src/app/pages/tournaments/tournaments.component.html
+++ b/src/app/pages/tournaments/tournaments.component.html
@@ -1,1 +1,6 @@
-<p>tournaments works!</p>
+<div class="page-content">
+    <h1>Torneos recientes</h1>
+    <div class="tournament-elem"  routerLink="{{tournament.id}}" *ngFor="let tournament of tournaments">
+        <app-tournament-card [tournament]="tournament"></app-tournament-card>
+    </div>
+</div>
