--- a/src/app/pages/tournaments/tournaments.component.scss
+++ b/src/app/pages/tournaments/tournaments.component.scss
@@ -5,11 +5,6 @@
 }
 
 .tournament-elem:hover{
-
-    //box-shadow: 3px 0px 0px var(--color-main);
-    //box-shadow: -3px 0px 0px var(--color-main);
-    //box-shadow: 0 0 0px 3px var(--color-main);
-    box-shadow: 0 0 8px -2px var(--color-main);
-    
+    box-shadow: -4px 0px 0px -1px var(--color-main);    
     cursor: pointer;
 }
