--- a/src/app/widgets/side-menu/side-menu.component.html
+++ b/src/app/widgets/side-menu/side-menu.component.html
@@ -4,7 +4,7 @@
             <a href="/" class="side-menu-link">
                 <svg xmlns="http://www.w3.org/2000/svg" heigth="3rem" width="3rem" viewBox="0 0 24 24"><path d="M20 7.093v-5.093h-3v2.093l3 3zm4 5.907l-12-12-12 12h3v10h7v-5h4v5h7v-10h3zm-5 8h-3v-5h-8v5h-3v-10.26l7-6.912 7 6.99v10.182z"/></svg>
                 <span class="link-text">
-                    <h1>Inicio</h1>
+                    <h1 class="my-0">Inicio</h1>
                 </span>
             </a>
         </li>
