--- a/src/app/widgets/side-menu/side-menu.component.scss
+++ b/src/app/widgets/side-menu/side-menu.component.scss
@@ -8,6 +8,7 @@
     font-family: 'Roboto', sans-serif;
     color: var(--color-bg);
     z-index: 1000;
+    box-shadow: 0 4px 10px 5px black;
 }
 .overlay-bg {
     z-index: 1000;
