🍞 Added toast service
With actually a couple more functionality (and potencial functionality) than expected

--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -31,5 +31,6 @@
 <div class="page-content">
     <h1>Componente principal</h1>
     <p>Contenido final aún por agregar.</p>
+    <button (click)="testToast()">Test toast</button>
 </div>
 
