➕ Added add tournament button

--- a/src/app/pages/tournaments/tournaments.component.html
+++ b/src/app/pages/tournaments/tournaments.component.html
@@ -1,5 +1,11 @@
 <div class="page-content">
     <h1>Torneos recientes</h1>
+    <button *ngIf="isUserLogged" class="main-btn add-tournament-btn" type="button">
+        <b aria-hidden="true">+</b>
+        <span class="ml-2">
+            Añadir torneo
+        </span>
+    </button>
     <div class="tournament-elem"  routerLink="{{tournament.id}}" *ngFor="let tournament of tournaments">
         <app-tournament-card [tournament]="tournament"></app-tournament-card>
     </div>
