--- a/src/app/pages/tournaments/tournaments.component.scss
+++ b/src/app/pages/tournaments/tournaments.component.scss
@@ -1,3 +1,20 @@
+
+.add-tournament-btn {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    border-radius: 5px;
+    width: 100%;
+    padding: 5px;
+    transition: 200ms;    
+    
+    
+    .btn-plus{
+        display: inline-block;
+        transition: 200ms;
+    }
+}
+
 .tournament-elem{
     border-radius: 5px;
     margin-top: 0.5rem;
@@ -8,3 +25,4 @@
     box-shadow: -4px 0px 0px -1px var(--color-main);    
     cursor: pointer;
 }
+
