--- a/src/app/widgets/login/login.component.html
+++ b/src/app/widgets/login/login.component.html
@@ -16,7 +16,7 @@
                     <label for="email">Email:</label>
                     <input class="text-input" type="text" formControlName="email">
                     <label for="password">Password:</label>
-                    <input class="text-input" type="text" formControlName="password">
+                    <input class="text-input" type="password" formControlName="password">
                     <button type="submit" class="main-btn btn-small">Login</button>
                 </form>
             </div>
