--- a/src/app/widgets/side-menu/side-menu.component.html
+++ b/src/app/widgets/side-menu/side-menu.component.html
@@ -2,7 +2,7 @@
 <div class="side-menu" [@openCloseSideMenu]="sideMenuOpen ? 'open' : 'closed'" (mouseleave)="showSideMenu(false)">
     <ul class="side-menu-nav">
         <li class="nav-item">
-            <a href="/" class="side-menu-link">
+            <a [routerLink]="'/'" (click)="showSideMenu(false)" class="side-menu-link">
                 <svg xmlns="http://www.w3.org/2000/svg" heigth="3rem" width="3rem" viewBox="0 0 24 24"><path d="M20 7.093v-5.093h-3v2.093l3 3zm4 5.907l-12-12-12 12h3v10h7v-5h4v5h7v-10h3zm-5 8h-3v-5h-8v5h-3v-10.26l7-6.912 7 6.99v10.182z"/></svg>
                 <span class="link-text">
                     <h1 class="my-0">Inicio</h1>
@@ -11,7 +11,7 @@
         </li>
         <hr/>
         <li class="nav-item" *ngFor="let elem of navElements">
-            <a [routerLink]="[elem.path]" class="side-menu-link">
+            <a [routerLink]="[elem.path]" (click)="showSideMenu(false)" class="side-menu-link">
                 <img src="{{elem.icon}}">
                 <span class="link-text">{{elem.text}}</span>
             </a>
