--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -1,5 +1,5 @@
 <div class="page-content">
     <h1 class="text-alert">404: No se encontró la página.</h1>
     <p>Asegurate de haber insertado la URL correcta.</p>
-    <a href="/" style="margin-left: 2rem;"><button class="main-btn btn-small">Volver a la página principal</button></a>
+    <a [routerLink]="'/'" style="margin-left: 2rem;"><button class="main-btn btn-small">Volver a la página principal</button></a>
 </div>
