--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
     </svg>
   </a>
   <div class="main_title">
+    <!-- TODO when user logged center ??? -->
     TEC eSports
     <svg version="1.1" viewBox="0 0 60 60" xmlns="http://www.w3.org/2000/svg">
       <g transform="translate(0,-237)">
@@ -16,9 +17,13 @@
     </svg>
   </div>
   <div>
-    <a (click)="showLoginOverlay(true)">
+    <a *ngIf="!loggedUser" (click)="showLoginOverlay(true)">
       <svg class="btn-toolbar" xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 24 24"><path d="M20.822 18.096c-3.439-.794-6.64-1.49-5.09-4.418 4.72-8.912 1.251-13.678-3.732-13.678-5.082 0-8.464 4.949-3.732 13.678 1.597 2.945-1.725 3.641-5.09 4.418-3.073.71-3.188 2.236-3.178 4.904l.004 1h23.99l.004-.969c.012-2.688-.092-4.222-3.176-4.935z"/></svg>
     </a>
+    <span *ngIf="loggedUser" (click)="showLoginOverlay(true)" class="btn-toolbar">
+      <span>{{loggedUser.email}}</span>
+      <svg width="26" height="26" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd"><path d="M20 23h2v1h-20v-1h2v-23h16v23zm-1-22h-14v22h14l-10-1.954v-18.015l10-2.031zm-7 11h-2v1h2v-1z"/></svg>
+    </span>
   </div>
 </div>
 <router-outlet></router-outlet>
