--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,6 +37,7 @@
 
 .main_title {
     display: flex;
+    justify-self: center;
     align-items: center;
     color: black;
     font-size: x-large;
@@ -48,11 +49,19 @@
 }
 
 .btn-toolbar {
+    span {
+        @media (max-width:500px) {
+            display: none;
+        }
+    }
+    color: var(--color-dark);
     fill: var(--color-dark);
     transition: 200ms ease;
 }
 
 .btn-toolbar:hover{
+    cursor: pointer;
+    color: rgba(0, 0, 0, 0.733);
     fill: rgba(0, 0, 0, 0.733);
 }
 
