--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,6 +22,7 @@
     </a>
     <span *ngIf="loggedUser" (click)="showLoginOverlay(true)" class="btn-toolbar">
       <span>{{loggedUser.email}}</span>
+      <!-- TODO When user logged cut @email.com and set max length -->
       <svg width="26" height="26" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd"><path d="M20 23h2v1h-20v-1h2v-23h16v23zm-1-22h-14v22h14l-10-1.954v-18.015l10-2.031zm-7 11h-2v1h2v-1z"/></svg>
     </span>
   </div>
