--- a/src/app/widgets/toast/toast.component.scss
+++ b/src/app/widgets/toast/toast.component.scss
@@ -1,3 +1,10 @@
+:host {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    margin: 1.5em 1.5em ;
+    z-index: 1200;
+}
 
 [app-toast].toast-normal {
     border-left: thick solid var(--color-main);
