🏆 Add tournament functionality added

--- a/src/app/pages/add-tournament/add-tournament.component.html
+++ b/src/app/pages/add-tournament/add-tournament.component.html
@@ -1,29 +1,27 @@
 <div class="page-content">
-    <button type="submit" class="w-100 title-button" disabled>
+    <button type="submit" class="w-100 title-button" [disabled]="!canSubmit" (click)="addTournament(newTournamentForm.value)">
         <h1 class="text-center">
             <span [inlineSVG]="'assets/svg/cup.svg'" [setSVGAttributes]="{'heigth':'3rem', 'width':'3rem'}" title-icon></span>
             Añadir torneo + 
         </h1>
     </button>
-    <form>
+    <form [formGroup]="newTournamentForm">
         <div class="form-row">
           <div class="form-group col-md-6">
             <label for="nombreTorneo">Nombre del torneo</label>
-            <input type="text" class="form-control" placeholder="[e.j.] (LoL) Stats overflow - II 2020">
+            <input type="text" class="form-control" formControlName="tournamentName" placeholder="[e.j.] (LoL) Stats overflow - II 2020">
           </div>
           <div class="form-group col-md-6">
             <label for="fechaComienzo">Fecha de comienzo</label>
-            <input type="date" class="form-control">
+            <input type="date" class="form-control" formControlName="startDate">
           </div>
         </div>
         <div class="form-group">
             <label for="description">Descriprión del torneo </label>
             <small> (opcional)</small>
-            <textarea rows="4" class="form-control" 
+            <textarea rows="4" class="form-control" formControlName="tournamentDescription"
                 placeholder="Comparte información útil. ¡Da a conocer los stakes de la competencia! ¡¡HYPEEEEEEEE!!"></textarea>
         </div>
-
-        
       </form>
 </div>
 
