--- a/src/styles.scss
+++ b/src/styles.scss
@@ -127,7 +127,7 @@
     color: var(--color-bg);
     background: var(--color-main);
     border-radius: 5px;
-
+    transition: 700ms cubic-bezier(0.075, 0.82, 0.165, 1);
     h1 {
         margin: 0;
     }
