--- a/src/app/pages/tournament/tournament.component.html
+++ b/src/app/pages/tournament/tournament.component.html
@@ -5,7 +5,7 @@
     <div class="card rounds-card">
         <div class="card-header">
             <h2 class="d-inline">Rondas</h2>
-            <span [class]="'edit-icon'" [inlineSVG]="'assets/svg/edit.svg'" (click)="editRounds()"></span>
+            <span *ngIf="isLoggedIn" [class]="'edit-icon'" [inlineSVG]="'assets/svg/edit.svg'" (click)="editRounds()"></span>
         </div>
         <div class="card-body">
             <ngb-accordion #acc="ngbAccordion">
@@ -16,7 +16,7 @@
                             <span [ngClass]="'chevron'" [inlineSVG]=" acc.isExpanded(round.id) ? 'assets/svg/chevronup.svg' : 'assets/svg/chevrondown.svg'"></span>
                             {{round.name}}
                         </button>
-                        <span [class]="'edit-icon'" [inlineSVG]="'assets/svg/edit.svg'" (click)="editSets(round.id)"></span>
+                        <span *ngIf="isLoggedIn" [class]="'edit-icon'" [inlineSVG]="'assets/svg/edit.svg'" (click)="editSets(round.id)"></span>
                     </ng-template>
                     <ng-template ngbPanelContent>
                         <ul class="list-group">
@@ -32,3 +32,4 @@
         </div>
     </div>
 </div>
+<app-edit-rounds [showOverlay$]="this.editRoundsOverlay$" ></app-edit-rounds>
