--- a/src/app/widgets/overlays/edit-rounds/edit-rounds.component.html
+++ b/src/app/widgets/overlays/edit-rounds/edit-rounds.component.html
@@ -1,1 +1,16 @@
-<p>edit-rounds works!</p>
+<div class="edit-rounds-component" *ngIf="showOverlay">
+    <div class="overlay-bg" (click)="hide()"></div>
+    <div class="overlay-card">
+        <div class="toolbar">
+            <div class="main_title">
+                Editar Rondas
+            </div>
+        </div>
+        <div class="page-content">
+            <p>edit rounds works</p>
+        </div>
+    </div>
+
+</div>
+
+
