📝 Added edit rounds partial functionality

--- a/src/app/pages/tournament/tournament.component.html
+++ b/src/app/pages/tournament/tournament.component.html
@@ -32,4 +32,4 @@
         </div>
     </div>
 </div>
-<app-edit-rounds [showOverlay$]="this.editRoundsOverlay$" ></app-edit-rounds>
+<app-edit-rounds *ngIf="tournament" [showOverlay$]="this.editRoundsOverlay$" [tournament]="tournament" [rounds]="roundList"></app-edit-rounds>
